--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ header {
   max-width: 800px;
   margin: 1rem;
   font-size: 12px;
+  box-shadow: 10px 10px 50px -1px rgba(0, 0, 0, 0.15);
 }
 
 .number-input {
